--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.6.0
   flutter_svg: ^2.0.7
-  intl: ^0.18.1
+  intl: ^0.19.0
+  device_preview: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
